Fix alignment on ratings

--- a/sites/vn_temp/css/main.css
+++ b/sites/vn_temp/css/main.css
@@ -78,6 +78,7 @@ body {
 }
 
 #thumbCW {
+	display: block;
 	text-align: left;
 	margin-top: 24px;
 	margin-left: 8px;
@@ -87,7 +88,7 @@ body {
 	font-size: 14px;
 }
 
-.testDiv {
+.shoujoContainer {
 	width: 160px;
 	height: 228px;
 	display: block;
